// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckBox /> should match the snapshot for a checked check 1`] = `
<div
  class="root checkbox checked"
>
  <input
    checked=""
    class="nativeInput"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="checkable base selected"
  >
    <svg
      baseProfile="full"
      fill="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M21 7L9 19l-5.5-5.5 1.414-1.414L9 16.172 19.586 5.586 21 7z"
      />
    </svg>
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="label"
  >
    check label 1
  </label>
</div>
`;

exports[`<CheckBox /> should match the snapshot for a single check 1`] = `
<div
  class="root checkbox"
>
  <input
    class="nativeInput"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="checkable base"
  >
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="label"
  >
    check label 1
  </label>
</div>
`;

exports[`<CheckBox /> should match the snapshot for a single check with no value or label 1`] = `
<div
  class="root checkbox"
>
  <input
    class="nativeInput"
    name=""
    type="checkbox"
    value=""
  />
  <div
    class="checkable base"
  >
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="label"
  />
</div>
`;

exports[`<CheckBox /> when with component child should match the snapshot 1`] = `
<div
  class="root checkbox"
>
  <input
    class="nativeInput"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="checkable base"
  >
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="label"
  >
    <h1
      class="root sizeScale8"
    >
      Hello checkbox
    </h1>
  </label>
</div>
`;
